Corrected padding on search box to keep message alignment consistent across pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ header {
 
 /**-------------------------------------------------------------------Search/Recipes Page----**/
 
-.seach-message-box {
+.search-message-box {
     padding: 20px 0;
     text-align: center;
 }
